Trying kotlin